# LlucsBrain-SNN

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: brain_evolution.yml
include/: LlucsBrain.cuh
src/: core_engine.cpp  core_engine.cu  main.cpp  stdp_learning.cpp  stdp_learning.cu
